# api/routes/api.php
@@ -19,7 +19,7 @@ use Illuminate\Support\Facades\Route;
 Route::get('skills', 'Api\SkillController@index');
 Route::get('showSkill/{id}', 'Api\SkillController@show');
 Route::post('storeSkill', 'Api\SkillController@store');
-Route::put('updateSkill', 'Api\SkillController@update');
+Route::put('updateSkill/{id}', 'Api\SkillController@update');
 Route::delete('delSkill/{id}', 'Api\SkillController@destroy');
 
 /* Countries */
@@ -27,7 +27,7 @@ Route::delete('delSkill/{id}', 'Api\SkillController@destroy');
 Route::get('country', 'Api\CountryController@index');
 Route::get('showCountry/{id}', 'Api\CountryController@show');
 Route::post('storeCountry', 'Api\CountryController@store');
-Route::put('updateCountry', 'Api\CountryController@update');
+Route::put('updateCountry/{id}', 'Api\CountryController@update');
 Route::delete('delCountry/{id}', 'Api\CountryController@destroy');
 
 /* Offers */
@@ -35,5 +35,5 @@ Route::get('offers', 'Api\OfferController@index');
 Route::get('showOffer/{id}', 'Api\OfferController@showOffer');
 Route::get('searchOffer/{name}/{salaryMin}/{salaryMax}/{country_id}', 'Api\OfferController@searchOffer');
 Route::post('storeOffer', 'Api\OfferController@store');
-Route::put('updateOffer', 'Api\OfferController@update');
+Route::put('updateOffer/{id}', 'Api\OfferController@update');
 Route::delete('delOffer/{id}', 'Api\OfferController@destroy');
